# prompt-engineering

./: .gitignore  README.md  decrypt.sh  encrypt.sh
assignments/04-final-project/app/: .env.example  database_setup.py  telegram_bot.py
avaliacoes/debate_notes/against/: alienation.md
classes/concepts/: theory_of_mind.md  x_shot.md
classes/notebooks/18-intro-to-langChain/: langchain_1-1.ipynb  langchain_1-2.ipynb  langchain_1-3.ipynb
classes/patterns/: chain_of_tought.md  plan_and_solve.md  program_aided_language_models.md  simtom.md  template.md
classes/slides/: Prompt Patterns & Techniques - 1.pdf.gpg  Prompt Patterns & Techniques - 2.pdf.gpg  Prompt Patterns & Techniques - 3.pdf.gpg  Prompt Patterns & Techniques - 4.pdf.gpg
patterns/: alternative_approaches.md  outline_technique.md
projects/01-debate/debate_notes/for/: efficiency.md  reduction_of_bias.md
projects/02-survey-paper/: survey_paper.md
projects/04-final-project/app/: psych_assistant_mvp.db  pyproject.toml  sentiment_analyzer.py
projects/04-final-project/docs/: manus_interaction.md
slides/: Introduction to Prompt Engineering.pdf.gpg
tasks/03/02/: reviews.xlsx  social_media_campaign.html
tasks/10/: client_service_table.xlsx  instructions.md
tasks/16/sysiphus_snake/: index.html
tasks/16/sysiphus_snake/js/: game.js
tasks/18/: db.jsonl  db.xlsx  pyproject.toml  task.ipynb
