[project]
name = "18"
version = "0.1.0"
description = ""
authors = [
    {name = "Gabriel Onishi",email = "gabriel.onishi@outlook.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "langchain-google-genai (>=2.1.4,<3.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "langchain (>=0.3.25,<0.4.0)",
    "faker (>=37.3.0,<38.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "openpyxl (>=3.1.5,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

